
CHANGED:

* Separated checker results into subdirectories to prevent a single directory
  growing too large.

* Helper scripts are now launched using sys.executable, rather than a
  hard-coded "python3".

* Checks run through the asynchronous checker now cache their results in the
  problemstate directory, to avoid having to do a double-lookup.

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

DOCUMENTATION:


##################
# Version 11.1.0 #
##################

ADDED:

* Added cheroot (https://github.com/cherrypy/cheroot) as a catsoop.tools
  package.

* Added websockets (https://github.com/aaugustin/websockets) as a catsoop.tools
  package.

CHANGED:

* cheroot is now used instead of uWSGI.

* File names for uploaded files now include the csq_name of the question they
  were uploaded for.

FIXED:

* Fixed an issue whereby the Python sandbox could leave handles to deleted
  files open (eventually leading to an error from having too many files open).

* Changed the Python sandbox to use sys.executable (instead of hard-coded path
  to an assumed location of a Python interpreter) when csq_python_interpreter is
  not set.

SECURITY:

* File names for uploaded files now include a hash of their contents to limit
  the feasibility of a brute-force attack to grab a different user's files.


##################
# Version 11.0.5 #
##################

ADDED:

* Added the get_upload utility for downloading uploaded files.

* Added "extra_data" field to checker results.

* Added tutor.read_checker_result for quickly reading checker results.

* Added csq_npoints as an option to the "pythoncode" question type.  If
  specified, it overrides any point values assigned to the individual test
  cases.

CHANGED:

* Changed the default checker used for multiple-choice-multiple-answer problems.

* The "fileupload" question type now uses get_upload to download user files,
  rather than a data URI.

* Made changes to make sure that files are always closed after being opened.

FIXED:
